Update path to dockerfile Fixes: https://github.com/AlmaLinux/build-system/issues/160

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -424,7 +424,7 @@ services:
       - ../alma-tests-cacher/vars.env
     build:
       context: ../alma-tests-cacher/
-      dockerfile: ../alma-tests-cacher/Dockerfile
+      dockerfile: Dockerfile
     restart: on-failure
     depends_on:
       - web_server
