--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -420,8 +420,6 @@ services:
 
   tests_cacher:
     image: alma-tests-cacher:latest
-    env_file:
-      - ../alma-tests-cacher/vars.env
     build:
       context: ../alma-tests-cacher/
       dockerfile: Dockerfile
@@ -432,6 +430,7 @@ services:
       - "../alma-tests-cacher/alma_tests_cacher:/code/alma_tests_cacher"
       - "../alma-tests-cacher/alma_tests_cacher.py:/code/alma_tests_cacher.py"
       - "../alma-tests-cacher/requirements.txt:/code/requirements.txt"
+      - "../alma-tests-cacher/vars.yaml:/code/vars.yaml"
     command: "bash -c '/wait_for_it.sh web_server:8000 &&
               source env/bin/activate &&
               pip3 install --upgrade pip &&
