--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -485,6 +485,8 @@ services:
     image: redis
     ports:
       - 6379:6379
+    volumes:
+      - "../volumes/redis/data:/data"
     restart: on-failure
     logging:
       driver: "json-file"
