--- a/.github/workflows/migrations-check.yml
+++ b/.github/workflows/migrations-check.yml
@@ -13,12 +13,21 @@ jobs:
         with:
           ref: ${{ github.event.pull_request.head.sha }}
           fetch-depth: 0
-      - name: Rebase
+      - name: Configure git and fetch origin/master
         run: |
           git config --global user.email "action@users.noreply.github.com"
           git config --global user.name "action"
           git fetch origin master
+      - name: Rebase
+        id: rebase
+        run: |
           git rebase origin/master
+        continue-on-error: true
+      - name: Merge
+        if: steps.rebase.outcome != 'success'
+        run: |
+          git rebase --abort
+          git merge --no-ff --no-log origin/master
       - name: Create dirs
         run: |
           mkdir -p /home/runner/work/albs-web-server/alts
