--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -52,7 +52,7 @@ jobs:
             db
             web_server
       - name: Run unit tests (pytest)
-        run: docker-compose run -e GITHUB_ACTIONS=true -v /tmp:/tmp --no-deps web_server bash -o pipefail -c 'source
+        run: docker-compose run -v /tmp:/tmp --no-deps web_server bash -o pipefail -c 'source
           env/bin/activate && pip3 install -r requirements.txt &&
           pytest -vv --ignore alws/ --cov-report term-missing:skip-covered
           --cov-report xml:/tmp/coverage.xml --junitxml=/tmp/pytest.xml --cov=alws
