Freeze dependencies for the syntax GH action and move them to other dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,9 @@ split_on_trailing_comma = true
 [tool.black]
 line-length = 79
 skip-string-normalization = true
+# see https://black.readthedocs.io/en/stable/the_black_code_style/future_style.html#preview-style
 preview = true
+enable-unstable-feature = ["hug_parens_with_braces_and_square_brackets"]
 
 [tool.pylint]
 max-line-length = 80
