--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,9 @@ alembic==1.13.1
 alembic-postgresql-enum==1.1.2
 pytest==8.1.0
 pytest-cov==4.1.0
+isort[colors]==5.13.2
+black==24.3.0
+pylint==3.1.0
 jmespath==1.0.1
 PyYAML==6.0.1
 lxml==5.1.0
