Integrate fastapi-sqla library into ALBS (AlmaLinux/build-system#230)
- Replaced db dependencies with fastapi_sqla dependencies
- Integrated session management with fasatpi_sqla context managers
- Removed manual session management with .begin(), .close(), .commit()
- Setting up fastapi-sqla for scripts and tasks outside FastAPI app
- Pytest fixtures for fastapi-sqla integration

--- a/tests/test-vars.env
+++ b/tests/test-vars.env
@@ -7,6 +7,8 @@ FASTAPI_SQLA__ASYNC__SQLALCHEMY_URL="postgresql+asyncpg://postgres:password@test
 FASTAPI_SQLA__PULP__SQLALCHEMY_POOL_PRE_PING=True
 FASTAPI_SQLA__PULP__SQLALCHEMY_POOL_RECYCLE=3600
 FASTAPI_SQLA__PULP__SQLALCHEMY_URL="postgresql+psycopg2://postgres:password@test_db/test-almalinux-bs"
+FASTAPI_SQLA__PULP_ASYNC__SQLALCHEMY_URL="postgresql+asyncpg://postgres:password@test_db/test-almalinux-bs"
+FASTAPI_SQLA__PULP_ASYNC__SQLALCHEMY_ECHO_POOL=True
 GITHUB_CLIENT="secret"
 GITHUB_CLIENT_SECRET="secret"
 JWT_SECRET="secret"
