--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,9 @@ asyncpg==0.29.0
 dramatiq[rabbitmq, watch]==1.17.0
 email-validator>=2.0
 # Can be updated only after migration to SQLAlchemy > 2.0
+# these 2 requirements are for fastapi-sqla
+fastapi-sqla==3.1.2
+structlog==24.1.0
 fastapi-users-db-sqlalchemy==6.0.1
 fastapi-users[all]==13.0.0
 fastapi==0.111.0
