--- a/reference_data/platform_flavors.yaml
+++ b/reference_data/platform_flavors.yaml
@@ -1,12 +1,12 @@
 - name: AlmaLinux-8-beta
   modularity:
     git_tag_prefix:
-      modified: a8
-      non_modified: c8
+      modified: a8-beta
+      non_modified: c8-beta
     versions:
-      - name: '8.9'
-        version_prefix: '80900'
-        dist_prefix: 'el8.9.0'
+      - name: '8.10'
+        version_prefix: '81000'
+        dist_prefix: 'el8.10.0'
   data:
      mock:
        secure_boot_macros:
@@ -97,9 +97,9 @@
       modified: a9-beta
       non_modified: c9-beta
     versions:
-      - name: '9.3'
-        version_prefix: '90300'
-        dist_prefix: 'el9.3.0'
+      - name: '9.4'
+        version_prefix: '90400'
+        dist_prefix: 'el9.4.0'
   data:
      mock:
        secure_boot_macros:
