Set up services in docker-compose.yml
- alts-celery
- alts-scheduler
- build_node
- sign_node
- tests_cacher

Resolves: AlmaLinux/build-system/issues/252

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,20 +42,17 @@ services:
     environment:
       CELERY_CONFIG_PATH: "/celery_config.yaml"
       EXTERNAL_NETWORK: "albs-web-server_default"
-    command: "bash -c 'source env/bin/activate && pip3 install --upgrade pip &&
-        pip3 install -r /tmp/requirements/celery.txt --no-cache-dir && celery
-        -A alts.worker.app worker --pool=threads --concurrency=20
-        --loglevel=INFO -Q docker-x86_64-0 -O fair --without-gossip
-        --without-mingle --without-heartbeat'"
+    command: "celery -A alts.worker.app worker
+                --pool=threads --concurrency=20
+                --loglevel=INFO -Q docker-x86_64-0 -O fair --without-gossip
+                --without-mingle --without-heartbeat"
     restart: on-failure
     privileged: true
     volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
-      - ../alts/configs/alts_config.yaml:/celery_config.yaml
-      - ../alts/alts:/code/alts
-      - ../alts/resources:/code/resources
-      - ../alts/tests:/code/tests
-      - ../alts/requirements:/tmp/requirements
+      - "/var/run/docker.sock:/var/run/docker.sock"
+      - "../alts/configs/alts_config.yaml:/celery_config.yaml"
+      - "../alts/alts:/code/alts"
+      - "../alts/resources:/code/resources"
     depends_on:
       - rabbitmq
     logging:
@@ -67,26 +64,24 @@ services:
   alts-scheduler:
     image: alts-scheduler:latest
     build:
-      dockerfile: Dockerfile.scheduler
       context: ../alts
+      dockerfile: Dockerfile.scheduler
+      target: alts-scheduler
     ports:
       - "8082:8000"
     environment:
       CELERY_CONFIG_PATH: "/scheduler_config.yaml"
       SCHEDULER_CONFIG_PATH: "/scheduler_config.yaml"
-    command: "bash -c 'source env/bin/activate && \
-                       pip3 install --upgrade pip && \
-                       pip3 install -r /tmp/requirements/scheduler.txt --no-cache-dir && \
-                       /wait_for_it.sh web_server:8000 && \
-                       uvicorn --host 0.0.0.0 alts.scheduler.app:app --limit-concurrency 100 --backlog 1000'"
+    command: "bash -c '
+                /wait-for-it.sh web_server:8000 && \
+                uvicorn --host 0.0.0.0 alts.scheduler.app:app --limit-concurrency 100 --backlog 1000'"
     restart: on-failure
     volumes:
-      - ../alts/configs/alts_config.yaml:/scheduler_config.yaml
-      - ../alts/alts:/code/alts
-      - ../alts/resources:/code/resources
-      - ../alts/tests:/code/tests
-      - ../alts/requirements:/tmp/requirements
+      - "../alts/configs/alts_config.yaml:/scheduler_config.yaml"
+      - "../alts/alts:/code/alts"
+      - "../alts/resources:/code/resources"
     depends_on:
+      - web_server
       - rabbitmq
     logging:
       driver: "json-file"
@@ -324,25 +319,20 @@ services:
         max-file: "3"
 
   build_node:
-    image: quay.io/almalinuxorg/albs-node:latest
+    image: albs-node:latest
     privileged: true
     build:
-      context: ../albs-node/
-      dockerfile: ./Dockerfile
+      context: ../albs-node
+      dockerfile: Dockerfile
+      target: albs-node
     env_file:
       - vars.env
     volumes:
-      # TODO: Hack for development, put placeholder here instead
-      - "../albs-node/node-config:/home/alt/.config"
-      - "../albs-node/requirements.txt:/build-node/requirements.txt"
+      - "../albs-node/node-config/castor/build_node.yml:/root/.config/castor/build_node.yml"
       - "../albs-node/build_node:/build-node/build_node"
       - "../albs-node/almalinux_build_node.py:/build-node/almalinux_build_node.py"
     restart: on-failure
-    command: "bash -c '/wait_for_it.sh web_server:8000 &&
-                       source env/bin/activate &&
-                       pip3 install --upgrade pip &&
-                       pip3 install -r requirements.txt --no-cache-dir &&
-                       python3 almalinux_build_node.py -v -t 2'"
+    command: "bash -c '/wait-for-it.sh web_server:8000 && python3 almalinux_build_node.py -v -t 2'"
     depends_on:
       - web_server
     logging:
@@ -352,25 +342,22 @@ services:
         max-file: "3"
 
   sign_node:
-    image: quay.io/almalinuxorg/albs-sign-node:latest
+    image: sign-node:latest
     build:
-      context: ../albs-sign-node/
-      dockerfile: ./Dockerfile
+      context: ../albs-sign-node
+      dockerfile: Dockerfile
+      target: sign-node
     env_file:
       - vars.env
     volumes:
-      # TODO: Hack for development, put placeholder here instead
-      - "../albs-sign-node/node-config:/home/alt/.config"
-      - "~/.gnupg:/home/alt/.gnupg"
+      - "~/.gnupg:/root/.gnupg"
+      - "../albs-sign-node/node-config/sign_node.yml:/root/.config/sign_node.yml"
       - "../albs-sign-node/almalinux_sign_node.py:/sign-node/almalinux_sign_node.py"
       - "../albs-sign-node/sign_node:/sign-node/sign_node"
-      - "../albs-sign-node/requirements.txt:/sign-node/requirements.txt"
     restart: on-failure
-    command: "bash -c '/wait_for_it.sh web_server:8000 &&
-                       source env/bin/activate &&
-                       pip3 install --upgrade pip &&
-                       pip3 install -r requirements.txt --no-cache-dir &&
-                       python3 almalinux_sign_node.py -v'"
+    command: "bash -c '/wait-for-it.sh web_server:8000 && python3 almalinux_sign_node.py -v'"
+    depends_on:
+      - web_server
     logging:
       driver: "json-file"
       options:
@@ -423,21 +410,17 @@ services:
   tests_cacher:
     image: alma-tests-cacher:latest
     build:
-      context: ../alma-tests-cacher/
+      context: ../alma-tests-cacher
       dockerfile: Dockerfile
+      target: cacher
     restart: on-failure
-    depends_on:
-      - web_server
     volumes:
       - "../alma-tests-cacher/alma_tests_cacher:/code/alma_tests_cacher"
       - "../alma-tests-cacher/alma_tests_cacher.py:/code/alma_tests_cacher.py"
-      - "../alma-tests-cacher/requirements.txt:/code/requirements.txt"
       - "../alma-tests-cacher/vars.yaml:/code/vars.yaml"
-    command: "bash -c '/wait_for_it.sh web_server:8000 &&
-              source env/bin/activate &&
-              pip3 install --upgrade pip &&
-              pip3 install -r /code/requirements.txt --no-cache-dir &&
-              python alma_tests_cacher.py'"
+    command: "bash -c '/wait-for-it.sh web_server:8000 && python3 alma_tests_cacher.py'"
+    depends_on:
+      - web_server
     logging:
       driver: "json-file"
       options:
