Use the almalinux/9-base image for the containers
Also service descriptions in docker-compose.yml were refactored.

--- a/.github/workflows/migrations-check.yml
+++ b/.github/workflows/migrations-check.yml
@@ -64,6 +64,4 @@ jobs:
             db
             web_server
       - name: Check migratrions
-        run: docker-compose run --rm --no-deps web_server bash -c 'source
-          env/bin/activate && pip3 install -r requirements.txt &&
-          alembic --config alws/alembic.ini upgrade head'
+        run: docker-compose run --rm --no-deps web_server alembic --config alws/alembic.ini upgrade head
