--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -60,8 +60,7 @@ jobs:
             db
             web_server
       - name: Run unit tests (pytest)
-        run: docker-compose run -v /tmp:/tmp --no-deps web_server bash -o pipefail -c 'source
-          env/bin/activate && pip3 install -r requirements.txt &&
+        run: docker-compose run -v /tmp:/tmp --no-deps web_server bash -o pipefail -c '
           pytest -vv --ignore alws/ --cov-report term-missing:skip-covered
           --cov-report xml:/tmp/coverage.xml --junitxml=/tmp/pytest.xml --cov=alws
           tests/ | tee /tmp/pytest-coverage.txt'
