--- a/Dockerfile.gitea-listener
+++ b/Dockerfile.gitea-listener
@@ -1,12 +1,18 @@
-FROM almalinux:8
+FROM almalinux/9-base:latest
 
-RUN mkdir -p /code && \
-    yum update -y && \
-    yum install python3-virtualenv python38 -y && \
-    yum clean all
-RUN curl https://raw.githubusercontent.com/vishnubob/wait-for-it/master/wait-for-it.sh -o wait_for_it.sh && chmod +x wait_for_it.sh
-COPY ./alws/scripts/albs-gitea-listener/requirements.txt /code/requirements.txt
-RUN cd /code && virtualenv -p python3.8 env && source env/bin/activate \
-    && pip3 install --upgrade pip && pip3 install -r /code/requirements.txt --no-cache-dir
 WORKDIR /code
-CMD ["/bin/bash", "-c", "source env/bin/activate && pip3 install --upgrade pip && pip3 install -r requirements.txt --no-cache-dir && python3 gitea_listener.py"]
+
+COPY alws/scripts/albs-gitea-listener/requirements.txt .
+RUN <<EOT
+  set -ex
+  python3 -m ensurepip
+  pip3 install -r requirements.txt
+  rm requirements.txt
+EOT
+
+COPY alws/scripts/git_cacher/requirements.txt .
+RUN <<EOT
+  set -ex
+  pip3 install -r requirements.txt
+  rm requirements.txt
+EOT
