--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,11 +3,36 @@ profile = "black"
 split_on_trailing_comma = true
 
 [tool.black]
-line-length = 79
+line-length = 120
 skip-string-normalization = true
 # see https://black.readthedocs.io/en/stable/the_black_code_style/future_style.html#preview-style
 preview = true
 enable-unstable-feature = ["hug_parens_with_braces_and_square_brackets"]
 
 [tool.pylint]
-max-line-length = 80
+max-line-length = 120
+
+# Minimum line length for functions/classes that require docstrings
+docstring-min-length = 50
+
+# https://pylint.readthedocs.io/en/stable/user_guide/checkers/features.html
+disable = [
+    "C0114", # missing-module-docstring
+    "R0902", # too-many-instance-attributes
+    "R0913", # too-many-arguments
+    "W1514", # unspecified-encoding
+]
+
+[tool.coverage.run]
+source = ['.']
+
+[tool.coverage.report]
+skip_empty = true
+include = ['alws/*']
+
+[tool.pytest.ini_options]
+pythonpath = '.'
+testpaths = ['tests']
+filterwarnings = [
+    'ignore:Pydantic serializer warnings:UserWarning'
+]
