--- a/.github/workflows/migrations-check.yml
+++ b/.github/workflows/migrations-check.yml
@@ -30,41 +30,23 @@ jobs:
           git merge --no-ff --no-log origin/master
       - name: Create dirs and files
         run: |
-          mkdir -p /home/runner/work/albs-web-server/alts
-          mkdir -p /home/runner/work/albs-web-server/albs-frontend
-          mkdir -p /home/runner/work/albs-web-server/albs-node
-          mkdir -p /home/runner/work/albs-web-server/albs-sign-node
-          mkdir -p /home/runner/work/albs-web-server/alma-tests-cacher
-          touch /home/runner/work/albs-web-server/alma-tests-cacher/vars.env
-          mkdir -p /home/runner/work/albs-web-server/albs-sign-file
-          touch /home/runner/work/albs-web-server/albs-sign-file/.env
-      - name: Add env file
-        run: |
-          touch ./vars.env
-          echo ALTS_TOKEN="secret" >> ./vars.env
-          echo ALMALINUX_CLIENT="secret" >> ./vars.env
-          echo ALMALINUX_CLIENT_SECRET="secret" >> ./vars.env
-          echo GITHUB_CLIENT="secret" >> ./vars.env
-          echo GITHUB_CLIENT_SECRET="secret" >> ./vars.env
-          echo POSTGRES_PASSWORD="password" >> ./vars.env
-          echo JWT_SECRET="secret" >> ./vars.env
-          echo POSTGRES_DB="almalinux-bs" >> ./vars.env
-          echo PACKAGE_BEHOLDER_ENABLED="False" >> ./vars.env
-          echo DATABASE_URL="postgresql+asyncpg://postgres:password@db/almalinux-bs" >> ./vars.env
-          echo SYNC_DATABASE_URL="postgresql+psycopg2://postgres:password@db/almalinux-bs" >> ./vars.env
-          echo PULP_DATABASE_URL="postgresql+psycopg2://postgres:password@db/almalinux-bs" >> ./vars.env
+          mkdir -p ../{alts,albs-frontend,albs-node,albs-sign-file,albs-sign-node,alma-tests-cacher}
+          touch ../albs-sign-file/.env
+          ln -sf tests/test-vars.env vars.env
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       - name: Build Docker image
         uses: docker/build-push-action@v5
         with:
           context: .
+          target: web-server-tests
           load: true
           cache-from: type=gha
           cache-to: type=gha,mode=max
       - name: Start services
-        run: docker compose up -d --no-deps web_server db
+        run: docker compose up -d test_db
       - name: Check migrations
-        run: docker compose run --rm --no-deps web_server alembic --config alws/alembic.ini upgrade head
+        run: docker compose run --rm web_server_tests alembic --config tests/test-alembic.ini upgrade head
       - name: Stop services
+        if: always()
         run: docker compose down --volumes
