Set up GH workflows
Resolves: AlmaLinux/build-system/issues/226

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ skip-string-normalization = true
 # see https://black.readthedocs.io/en/stable/the_black_code_style/future_style.html#preview-style
 preview = true
 enable-unstable-feature = ["hug_parens_with_braces_and_square_brackets"]
+extend-exclude = 'alws/alembic'
 
 [tool.pylint]
 max-line-length = 120
@@ -25,6 +26,10 @@ disable = [
 
 [tool.coverage.run]
 source = ['.']
+omit = [
+    'alws/alembic/*',
+    'alws/scripts/*',
+]
 
 [tool.coverage.report]
 skip_empty = true
