--- a/reference_data/platforms.yaml
+++ b/reference_data/platforms.yaml
@@ -1732,6 +1732,9 @@
       - name: '9.3'
         version_prefix: '90300'
         dist_prefix: 'el9.3.0'
+      - name: '9.4'
+        version_prefix: '90400'
+        dist_prefix: 'el9.4.0'
   type: rpm
   arch_list:
     - i686
